Add first iteration of DB persistence
