# yalse-core/swagger.yml
@@ -137,3 +137,22 @@ paths:
       responses:
         200:
           description: successful operation
+  /database:
+    put:
+      summary: WIP
+      description: WIP
+      operationId: yalse_core.api.create_database
+      responses:
+        202:
+          description: request accepted
+  /database/records:
+    get:
+      summary: WIP
+      description: WIP
+      operationId: yalse_core.api.get_database_records
+      responses:
+        200:
+          description: request accepted
+
+
+
