# yalse-core/yalse_core/app.py
@@ -1,13 +1,33 @@
 #!/usr/bin/env python3
 
 import logging
-
 import connexion
+from sqlalchemy_utils import database_exists, create_database
+
+from yalse_core.database import db
 
 logging.basicConfig(level=logging.INFO)
 
-app = connexion.App(__name__)
-app.add_api('../swagger.yml')
+
+def create_app():
+    app = connexion.App(__name__)
+    app.add_api('../swagger.yml')
+
+    app.app.config['SQLALCHEMY_DATABASE_URI'] = 'postgresql://docker:docker@db:5432/yalse'
+    app.app.after_request(after_request)
+
+    return app
+
+
+def register_extensions(app):
+    db.init_app(app)
+
+
+def setup_database(app):
+    with app.app_context():
+        if not database_exists(app.config['SQLALCHEMY_DATABASE_URI']):
+            create_database(app.config['SQLALCHEMY_DATABASE_URI'])
+            db.create_all()
 
 
 def after_request(response):
@@ -17,6 +37,7 @@ def after_request(response):
     return response
 
 
-app.app.after_request(after_request)
-
+app = create_app()
 application = app.app
+register_extensions(application)
+setup_database(application)
